--- a/examples/whitepapertest.html
+++ b/examples/whitepapertest.html
@@ -7,9 +7,8 @@
     <!--<script src='https://www.w3.org/Tools/respec/respec-w3c-common' class='remove'></script>	 --> 
     <script class='remove'>
       var respecConfig = {
-        specStatus: "GEO-ED",
-        specType: "pr",
-        noRecTrack: true,
+        specStatus: "GEO-def",
+        specType: "im",
         editors: [
         {
         name: "Linda van den Brink",
@@ -130,12 +129,13 @@
     </section>
     <p class="issue">Op deze manier kunnen we open punten opnemen in de tekst</p>
     <aside class="example" title='Voorbeeld code'>
-      <p>Hier komt een voorbeeld.</p>
+      <p>Hier komt een voorbeeld.
         <pre>
         const sum = [...items]
         .map(item => item * 2)
         .reduce((sum, next) => sum + (next || 0) );
         </pre>
+      </p>
     </aside>
     <p class="ednote" title="Voorbeeld notitie">Tekst, tekst, en nog meer tekst ...</p>
     <p class="warning" title="Fout">Hier zit een fout.</p>
