--- a/examples/whitepapertest.html
+++ b/examples/whitepapertest.html
@@ -7,8 +7,8 @@
     <!--<script src='https://www.w3.org/Tools/respec/respec-w3c-common' class='remove'></script>	 --> 
     <script class='remove'>
       var respecConfig = {
-        specStatus: "GEO-def",
-        specType: "im",
+        specStatus: "GEO-basis",
+        specType: "pr",
         editors: [
         {
         name: "Linda van den Brink",
