--- a/examples/whitepapertest.html
+++ b/examples/whitepapertest.html
@@ -52,8 +52,12 @@
         <h3>Leeswijzer</h3>
         <p>...</p>
       </section>
-      <figure id="figure-svg">
+      <figure id="figure-svg" class="scalable">
         <img src="https://tools.geostandaarden.nl/respec/media/logos/sample.svg" alt="sample-svg" height="300" width="300">
+        <figcaption>SVG sample to test all ReSpec content.</figcaption>
+      </figure>
+      <figure class="scalable">
+        <img src="https://tools.geostandaarden.nl/respec/media/logos/sample.svg" alt="sample-svg">
         <figcaption>SVG sample to test all ReSpec content.</figcaption>
       </figure>
     </section>
