--- a/examples/whitepapertest.html
+++ b/examples/whitepapertest.html
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/media/logos/Geonovum.ico'/>
-    <link rel="stylesheet" href="/media/localstyle.css">
+    <link rel="stylesheet" href="/media/localstyles.css">
     <title>Whitepaper Standaarden</title>
     <script src='/js/deps/require.js' data-main='/js/profile-geonovum' class='remove'></script>
     <script class='remove'>
@@ -51,7 +51,7 @@
         <figcaption>SVG sample to test all ReSpec content.</figcaption>
       </figure>
       <figure class="scalable">
-        <img src="https://tools.geostandaarden.nl/respec/data/dynamic/BRO%20Bodem%20en%20Grondwatertrappenkaart.png" alt="sample-png">
+        <img src="https://tools.geostandaarden.nl/respec/data/dynamic/BRO%20Bodem%20en%20Grondwatertrappenkaart.png" alt="sample-png" height="600" width="100%">
         <figcaption>SVG sample to test all ReSpec content.</figcaption>
       </figure>
     </section>
