--- a/examples/whitepapertest.html
+++ b/examples/whitepapertest.html
@@ -11,7 +11,7 @@
       var respecConfig = {
         specStatus: "GN-VV",
         specType: "IM",
-        //publishSpace: "bin",
+        pubDomain: "bin",
         editors: [{
             name: "Linda van den Brink",
             company: "Geonovum",
@@ -32,10 +32,11 @@
   <body>
     <section id='abstract'>
       <p>Samenvatting van de whitepaper.</p>
-          <span class='issue'>This is clearly an inline issue.</span>
-    <span class="issue"><span class="marker">ISSUE</span>This is clearly an inline issue.</span>
-    <span class='note'>This is clearly an inline note.</span>
-    <span class='note'><span class="marker">NOOT</span>This is clearly an inline note.</span>
+      <span class='issue'>This is clearly an inline issue.</span>
+      <span class="issue"><span class="marker">ISSUE</span>This is clearly an inline issue.</span>
+      <span class='note'>This is clearly an inline note.</span>
+      <span class='note'><span class="marker">NOOT</span>This is clearly an inline note.</span>
+      <div class="map-canvas" style="width: 800px; height: 600px;"></div>
     </section>
     <section id='sotd'>
       <p>Status van het document.</p>
